Game updates (see notes)
-iterated and completed first level
-Added collection, checkpoints and hazards into the level
- Coins now promt user in the direction of the objective (not sutble)
-Background created using paper lamps in substituion of mine lights

--- a/Quwaine Dantes Resubmission/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Quwaine Dantes Resubmission/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -17,6 +17,7 @@ bSCSEditorShowFloor=False
 SCSViewportCameraSpeed=2
 AssetViewerProfileName=
 MaterialQualityLevel=1
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 GameGetsMouseControl=False
@@ -74,8 +75,8 @@ CurrentPosGridSize=0
 CurrentScalingGridSize=4
 
 [MRU]
-MRUItem0=/Game/2DSideScrollerBP/Maps/Level_2
-MRUItem1=/Game/2DSideScrollerBP/Maps/Level_1
+MRUItem0=/Game/2DSideScrollerBP/Maps/Level_1
+MRUItem1=/Game/2DSideScrollerBP/Maps/Level_2
 MRUItem2=/Game/2DSideScrollerBP/Maps/Tutorial_Level
 MRUItem3=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 MRUItem4=/Game/2DSideScrollerBP/Maps/Mainmenu
@@ -103,19 +104,12 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/2DSideScrollerBP/Maps/Level_2
+LastLevel=/Game/2DSideScrollerBP/Maps/Level_1
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Map/NInja_Bunnies_Boss_Level.NInja_Bunnies_Boss_Level
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9_Sprite.CircleOf9_Sprite
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin2_Sprite.CircleOf9reskin2_Sprite
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin3_Sprite.CircleOf9reskin3_Sprite
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin4_Sprite.CircleOf9reskin4_Sprite
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin5_Sprite.CircleOf9reskin5_Sprite
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin_Sprite.CircleOf9reskin_Sprite
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/PandaMouse_Ninja_Idle_Sprite_0.PandaMouse_Ninja_Idle_Sprite_0
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/Level_2.Level_2:PersistentLevel.Level_2
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Map/Ninja_Bunnies_First_Level.Ninja_Bunnies_First_Level
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Map/Ninja_Bunnies_Tutorial_Level1.Ninja_Bunnies_Tutorial_Level1
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1319,6 +1313,11 @@ CameraBlockingVolume.BrushSettings=True
 CameraBlockingVolume.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Sprites/Level2background_Sprite.Level2background_Sprite;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Map/Ninja_Bunnies_Tutorial_Level1.Ninja_Bunnies_Tutorial_Level1;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Map/Ninja_Bunnies_Tutorial_Level.Ninja_Bunnies_Tutorial_Level;
+RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_4
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_Hazard.Tutorial_Hazard;
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
 RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/PandaMouse_Ninja_Idle_Sprite_0.PandaMouse_Ninja_Idle_Sprite_0;
 RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/Cat_Ninja_Idle_Sprite_0.Cat_Ninja_Idle_Sprite_0;
@@ -1331,20 +1330,15 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin3_Sp
 RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin2_Sprite.CircleOf9reskin2_Sprite;
 RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9_Sprite.CircleOf9_Sprite;
 RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Sprites/win_screen_Sprite.win_screen_Sprite;
-RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Sprites/Level2background_Sprite.Level2background_Sprite;
 RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Map/NInja_Bunnies_Boss_Level.NInja_Bunnies_Boss_Level;
-RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_4
 RecentlyPlaced=/Script/Engine.CameraBlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_5
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tut_Text_4.Tut_Text_4;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tut_Text_3.Tut_Text_3;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tut_Text_2.Tut_Text_2;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Collection.Collection;
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[19]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[26]\" \"Object.Sprite.PerTileData.PerTileData[28]\" \"Object.Sprite.PerTileData.PerTileData[30]\" \"Object.Sprite.PerTileData.PerTileData[32]\" \"Object.Sprite.PerTileData.PerTileData[32].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[32].CollisionData.Shapes.Shapes[0].Vertices.Vertices[6]\" \"Object.Sprite.PerTileData.PerTileData[34]\" \"Object.Sprite.PerTileData.PerTileData[36]\" \"Object.Sprite.PerTileData.PerTileData[38]\" \"Object.Sprite.PerTileData.PerTileData[52]\" \"Object.Sprite.PerTileData.PerTileData[53]\" \"Object.Sprite.PerTileData.PerTileData[54]\" \"Object.Sprite.PerTileData.PerTileData[56]\" \"Object.Sprite.PerTileData.PerTileData[58]\" \"Object.Sprite.PerTileData.PerTileData[60]\" "
+PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[19]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[26]\" \"Object.Sprite.PerTileData.PerTileData[28]\" \"Object.Sprite.PerTileData.PerTileData[30]\" \"Object.Sprite.PerTileData.PerTileData[32]\" \"Object.Sprite.PerTileData.PerTileData[32].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[34]\" \"Object.Sprite.PerTileData.PerTileData[36]\" \"Object.Sprite.PerTileData.PerTileData[38]\" \"Object.Sprite.PerTileData.PerTileData[52]\" \"Object.Sprite.PerTileData.PerTileData[53]\" \"Object.Sprite.PerTileData.PerTileData[54]\" \"Object.Sprite.PerTileData.PerTileData[56]\" \"Object.Sprite.PerTileData.PerTileData[58]\" \"Object.Sprite.PerTileData.PerTileData[58].CollisionData\" \"Object.Sprite.PerTileData.PerTileData[58].CollisionData.Shapes.Shapes[1]\" \"Object.Sprite.PerTileData.PerTileData[58].CollisionData.Shapes.Shapes[1].Vertices.Vertices[19]\" \"Object.Sprite.PerTileData.PerTileData[60]\" "
 Object=
 PaperSpriteComponent=
 MeshComponent=
@@ -2022,6 +2016,15 @@ NewLevelDialog.LastCompileMethod=Unknown
 /Game/2DSideScrollerBP/Blueprints/HUDS/ScoreHud.ScoreHud=1
 /Game/2DSideScrollerBP/Sprites/tileset/Tileset_Sprites/Level2background_Sprite.Level2background_Sprite=1
 /Game/2DSideScrollerBP/Sprites/tileset/Tileset_Sprites/win_screen_Sprite.win_screen_Sprite=1
+/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9_Sprite.CircleOf9_Sprite=1
+/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin2_Sprite.CircleOf9reskin2_Sprite=1
+/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin3_Sprite.CircleOf9reskin3_Sprite=1
+/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin4_Sprite.CircleOf9reskin4_Sprite=1
+/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin5_Sprite.CircleOf9reskin5_Sprite=1
+/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin_Sprite.CircleOf9reskin_Sprite=1
+/Game/2DSideScrollerBP/Sprites/Tutorial_Level/PandaMouse_Ninja_Idle_Sprite_0.PandaMouse_Ninja_Idle_Sprite_0=1
+/Game/2DSideScrollerBP/Maps/Level_2.Level_2:PersistentLevel.Level_2=1
+/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Tileset/Tileset_For_Tutorial_Level_TileSet.Tileset_For_Tutorial_Level_TileSet=1
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
